Improved readability, removed deprecated code, fixed comments